Further succ (and ess)

--- a/SimTECH/SimTECH/Pages/Factors/IncidentEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/IncidentEditor.razor
@@ -77,7 +77,7 @@
             Model.Category = (CategoryIncident)categoryChip.Value;
         }
 
-        if (Model.Penalized)
+        if (!Model.Penalized)
         {
             Model.Limit = 0;
             Model.Punishment = 0;
