--- a/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
@@ -27,7 +27,7 @@
 
 @code {
     [CascadingParameter] protected MudDialogInstance? ChartDialog { get; set; }
-    [Parameter, EditorRequired] public List<RaceDriver> RaceDrivers { get; set; }
+    [Parameter, EditorRequired] public List<RaceDriver> Drivers { get; set; }
 
     ApexCharts.ApexChartOptions<DataPoint> options = Constants.ChartOptionsDefault;
     List<DataSet> dataSets = new();
@@ -36,12 +36,12 @@
 
     protected override void OnInitialized()
     {
-        var leaderScores = RaceDrivers.First(e => e.Position == 1).LapScores;
+        var leaderScores = Drivers.First(e => e.Position == 1).LapScores;
         var amountCalculated = leaderScores.Count;
 
-        var seenTeamIdentifiers = new List<long>(RaceDrivers.Count);
+        var seenTeamIdentifiers = new List<long>(Drivers.Count);
 
-        foreach (var driver in RaceDrivers)
+        foreach (var driver in Drivers)
         {
             var dataSet = new DataSet { Label = driver.FullName };
 
