--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -9,7 +9,7 @@
 @inject TyreService _tyreService
 @inject BreadcrumbProvider _bread
 @inject NavigationManager _nav
-@inject IDialogService _dialogService
+@inject IDialogService _dialog
 @inject ISnackbar _snack
 @inject IOptions<SimConfig> _config
 
@@ -27,19 +27,10 @@
                     </MudTabPanel>
                     <MudTabPanel Text="Practice">
                         <MudTabs Centered="true" Outlined="true">
-                            @foreach (var prac in practiceSessions.Order())
+                            @foreach (var session in practiceSessions.OrderBy(e => e.SessionIndex))
                             {
-                                <MudTabPanel Text="@($"FP{prac}")" ID="@($"fp_{prac}")">
-                                    <Practice PracticeIndex="@prac"
-                                              PracticeScores="@practiceScores"
-                                              Config="@config" />
-                                </MudTabPanel>
-                            }
-                            @if (raceDisabled)
-                            {
-                                <MudTabPanel Text="@($"FP{nextPractice}")" ID="@($"fp_{nextPractice}")">
-                                    <Practice PracticeIndex="@nextPractice"
-                                              PracticeScores="@practiceScores"
+                                <MudTabPanel Text="@($"FP{session.SessionIndex}")" ID="@($"fp_{session.SessionIndex}")">
+                                    <Practice PracticeSession="@session"
                                               Config="@config"
                                               OnFinish="PersistPractice" />
                                 </MudTabPanel>
@@ -47,28 +38,16 @@
                         </MudTabs>
                     </MudTabPanel>
                     <MudTabPanel Text="Qualifying">
-                        @if (qualySessions > 1)
-                        {
-                            <MudTabs @ref="_qualyTabs" Centered="true" Outlined="true">
-                                @for (int i = 1; i <= qualySessions; i++)
-                                {
-                                    var j = i;
-                                    <MudTabPanel Text="@($"Q{j}")" Icon="@Icons.Material.Filled.AccessTime" ID="@($"q_{j}")">
-                                        <Qualifying QualifyingIndex="@j"
-                                                    QualifyingScores="@qualyScores"
-                                                    Config="@config"
-                                                    OnFinish="PersistQualifying" />
-                                    </MudTabPanel>
-                                }
-                            </MudTabs>
-                        }
-                        else
-                        {
-                            <Qualifying QualifyingIndex="1"
-                                        QualifyingScores="@qualyScores"
-                                        Config="@config"
-                                        OnFinish="PersistQualifying" />
-                        }
+                        <MudTabs @ref="_qualyTabs" Centered="true" Outlined="true" KeepPanelsAlive="true">
+                            @foreach (var session in qualySessions)
+                            {
+                                <MudTabPanel Text="@($"Q{session.SessionIndex}")" Icon="@Icons.Material.Filled.AccessTime">
+                                    <Qualifying QualySession="@session"
+                                                Config="@config"
+                                                OnFinish="PersistQualifying" />
+                                </MudTabPanel>
+                            }
+                        </MudTabs>
                     </MudTabPanel>
                     <MudTabPanel Text="Race" Disabled="@raceDisabled">
                         <Race LapScores="@lapScores"
@@ -98,8 +77,11 @@
     private List<Trait> trackTraits = new();
     private List<Tyre> tyres;
 
-    private List<PracticeScore> practiceScores = new();
-    private List<QualifyingScore> qualyScores = new();
+    private List<PracticeScore> practiceScores = new();//delet
+    private List<QualifyingScore> qualyScores = new();//delet
+    private List<PracticeSession> practiceSessions = new();
+    private List<QualifyingSession> qualySessions = new();
+
     private List<LapScore> lapScores = new();
     private List<RaceOccurrence> occurrences = new();
     private List<GivenPenalty> upcomingPenalties = new();
@@ -110,10 +92,6 @@
     MudTabs? _qualyTabs;
 
     bool loading = true;
-    int practiceCompleted;
-    int nextPractice => 1 + practiceCompleted;
-    List<int> practiceSessions = new();
-    int qualySessions;
 
     bool raceDisabled => RaweCeek.Race.State != State.Advanced && RaweCeek.Race.State != State.Closed;
     bool postraceDisabled => RaweCeek.Race.State != State.Closed;
@@ -123,12 +101,6 @@
         //climates = await _climateService.GetClimates(StateFilter.All);
         incidents = await _incidentService.GetIncidents(StateFilter.All);
         tyres = await _tyreService.GetTyres(StateFilter.All);
-        practiceCompleted = await _raceService.PracticeSessionsCompleted(RaceId);
-
-        @for (int i = 1; i <= practiceCompleted; i++)
-        {
-            practiceSessions.Add(i);
-        }
 
         practiceScores = await _raceService.GetPracticeScores(RaceId);
         qualyScores = await _raceService.GetQualifyingScores(RaceId);
@@ -161,7 +133,49 @@
         RaweCeek.Season = await _seasonService.GetSeasonById(race.SeasonId);
         RaweCeek.Climate = await _climateService.GetClimateById(race.ClimateId);
 
-        qualySessions = RaweCeek.Season.QualifyingFormat.SessionCount();
+        // Practice loading
+        foreach (var groupedPracticeScores in practiceScores.GroupBy(e => e.Index))
+        {
+            practiceSessions.Add(new PracticeSession
+            {
+                SessionIndex = groupedPracticeScores.Key,
+                IsFinished = true,
+                SessionScores = groupedPracticeScores.ToList(),
+            });
+        }
+
+        if (race.State != State.Advanced && race.State != State.Closed)
+            AddNewPracticeSession();
+
+        // Qualifying loading
+        var qSessionCount = RaweCeek.Season.QualifyingFormat.SessionCount();
+        for (int i = 1; i <= qSessionCount; i++)
+        {
+            var currentScores = qualyScores.Where(e => e.Index == i).ToList();
+            var qSession = new QualifyingSession
+                {
+                    SessionIndex = i,
+                    IsFinished = currentScores.Any(),
+                    SessionScores = currentScores,
+                };
+
+            // REFACTOR: Er is hier vast een betere oplossing voor
+            if (qSession.SessionIndex == 1)
+            {
+                qSession.ProgressionCutoff = RaweCeek.Season.QualifyingAmountQ2;
+            }
+            else if (qSession.SessionIndex == 2)
+            {
+                qSession.AllowedEntries = RaweCeek.Season.QualifyingAmountQ2;
+                qSession.ProgressionCutoff = RaweCeek.Season.QualifyingAmountQ3;
+            }
+            else if (qSession.SessionIndex == 3)
+            {
+                qSession.AllowedEntries = RaweCeek.Season.QualifyingAmountQ3;
+            }
+
+            qualySessions.Add(qSession);
+        }
 
         await LoadDrivers();
 
@@ -305,7 +319,7 @@
                 ["Tyres"] = tyres.Where(e => e.State == State.Active).ToList(),
             };
 
-        var dialog = await _dialogService.ShowAsync<TyrePicker>("Set tyre", parameters);
+        var dialog = await _dialog.ShowAsync<TyrePicker>("Set tyre", parameters);
         var result = await dialog.Result;
 
         if (!result.Canceled && result.Data != null && result.Data is Tyre pickedTyre)
@@ -319,9 +333,19 @@
         }
     }
 
+    private void AddNewPracticeSession()
+    {
+        var nextSession = practiceSessions.Count() + 1;
+        practiceSessions.Add(new PracticeSession
+            {
+                SessionIndex = nextSession,
+                IsFinished = false,
+                SessionScores = new(),
+            });
+    }
+
     private async Task PersistPractice(int practiceIndex)
     {
-        // This DOES save succesfully BUT it does not handle the reloading very well
         var practiceResult = practiceScores.Where(e => e.Index == practiceIndex).ToList();
         var gridResults = practiceResult.ToDictionary(e => e.ResultId, e => e.Position);
 
@@ -336,8 +360,7 @@
             matchingDriver.Position = res.Value;
         }
 
-        practiceCompleted++;
-        practiceSessions.Add(practiceIndex);
+        AddNewPracticeSession();
     }
 
     private async Task PersistQualifying(int qualyIndex)
@@ -384,8 +407,8 @@
             var nextQ = 1 + qualyIndex;
 
             // Navigate to the next qualifying session
-            if (qualySessions > 1 && _qualyTabs != null)
-                _qualyTabs.ActivatePanel($"q_{nextQ}");
+            //if (qualySessions > 1 && _qualyTabs != null)
+            //    _qualyTabs.ActivatePanel($"q_{nextQ}");
         }
     }
 
